Fix 404 page spacing

--- a/webstyle.css
+++ b/webstyle.css
@@ -213,16 +213,20 @@ cite {
   height: 75%;
   background-color: var(--navyblue);
 
+  text-align: center;
   position: absolute;
-  top: 0;
+  top: 10vh;
   bottom: 0;
   left: 0;
   right: 0;
-  text-align: center;
 
   margin-top:auto;
   margin-bottom: auto;
   padding: 0% 5%;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .error p {
